2010-01-04  Jb Evain  <jbevain@novell.com>

	* TimeZoneInfo.AdjustmentRule.cs, TimeZoneInfo.TransitionTime.cs:
	Do not include in both mscorlib and System.Core for a NET_2_1 profile.

2009-07-16  Sebastien Pouliot  <sebastien@ximian.com>

	* InvalidTimeZoneException.cs, TimeZoneInfo.AdjustmentRule.cs,
	TimeZoneInfo.cs, TimeZoneInfo.TransitionTime.cs: Bring back those
	inside NET_2_1 profile for Moonlight.

2009-06-10  Marek Safar  <marek.safar@gmail.com>

	* TimeZoneInfo.AdjustmentRule.cs, TimeZoneInfo.TransitionTime.cs,
	Funcs.cs, InvalidTimeZoneException.cs, Actions.cs, TimeZoneInfo.cs,
	TimeZoneNotFoundException.cs: Updated to 4.0 changes.

2009-06-03  Marek Safar  <marek.safar@gmail.com>

	* Func.cs: Add 4.0 forwarders.

2009-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* TimezoneInfo.cs: TimeZoneDirectory property should not be public

2008-10-31  Stephane Delcroix  <sdelcroix@novell.com>

	* TimezoneInfo.cs: Drop overlapping rules, fix the 3 dst changes in 
	Tunis in 1943

2008-10-31  Stephane Delcroix  <sdelcroix@novell.com>

	* TimezoneInfo.cs: fix for Argentina

2008-10-31  Stephane Delcroix  <sdelcroix@novell.com>

	* TimezoneInfo.cs: add indices for substrings.

2008-10-31  Stephane Delcroix  <sdelcroix@novell.com>

	* TimezoneInfo.cs: double the buffer size, as some tz files grew up
	recently and failed to load.

2008-08-04  Jb Evain  <jbevain@novell.com>

	* TimeZoneInfo.cs: avoid using a SortedDictionary when not needed.

2008-06-25  Jb Evain  <jbevain@novell.com>

	* TimeZoneInfo.cs: remove the dependance to Mono.DataConverter
	which is only used to read big endian int32.

2008-05-26  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneInfo.cs: workaround for weird transition dates, like for 
	America/Phoenix. Fixes bnc #391093.

2008-05-26  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneInfo.cs: nullity check in HasSameRules (). Fixes bnc #391011

2008-04-13  Jb Evain  <jbevain@novell.com>

	* Func.cs: remove old ugly 2.1 hack.