@@ -32,6 +32,9 @@ namespace System
 {
 	public sealed partial class TimeZoneInfo {
 		[SerializableAttribute]
+#if NET_4_0 || BOOTSRAP_NET_4_0
+		[TypeForwardedFrom (Consts.AssemblySystemCore_3_5)]
+#endif
 		public sealed class AdjustmentRule : IEquatable<TimeZoneInfo.AdjustmentRule>, ISerializable, IDeserializationCallback
 		{
 			DateTime dateEnd;
