@@ -33,6 +33,9 @@ namespace System
 	public sealed partial class TimeZoneInfo 
 	{
 		[SerializableAttribute]
+#if NET_4_0 || BOOTSRAP_NET_4_0
+		[TypeForwardedFrom (Consts.AssemblySystemCore_3_5)]
+#endif
 		public struct TransitionTime : IEquatable<TimeZoneInfo.TransitionTime>, ISerializable, IDeserializationCallback
 		{
 			DateTime timeOfDay;
